Changes to content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           
         </ul>
         <p>
-          <a href="/">Naar Python Extra</a>
+          <a href="{{ site.github.url }}">Naar Python Extra</a>
         </p>
       </nav>
       <section>
