--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,8 @@
 ---
----
+--- 
 
 @import "{{ site.theme }}";
+
 
 header {
     background: #000;
@@ -13,18 +14,40 @@ header {
 }
 
 body {
-    background: #ededed;
+    background: #f7f7f7;
+    color: #333;
     font-size: 18px;
     line-height: 24px;
     font-family: "Quattrocento Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-h3, h4, h5, h6 {
+
+section {
+    background: #ffffff;
+
+
+    ul {
+        list-style-image: none;
+        list-style-type: square;
+        padding: 40px;
+        background-color: #fdfff3;
+        border-radius: 10px;
+        border: 1px solid #bbb;
+    }
+}
+
+h3,
+h4,
+h5,
+h6 {
     color: #FF1293;
 }
 
 hr {
-    background: #888;
+    background: #FF1293;
     height: 2px;
 }
 
+img {
+    border: 1px solid #000;
+}
