--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,10 +50,12 @@ section {
     padding: 0 0 0 20px;
 
     li {
+      background-color: #ededed;
       margin-bottom: 5px;
       padding: 5px 10px;
-      font-weight: 400;
+      font-weight: 300;
       font-size: 18px;
+      color: #000;
     }
   }
 }
@@ -80,7 +82,8 @@ nav {
     font-size: 16px;
 
     a {
-      color: #000;
+      color: #551A8B;
+      text-decoration: none;
     }
   }
 }
